# projects

./: .gitignore  LICENSE
clojure/a_01/: CHANGELOG.md  README.md  project.clj
clojure/a_01/doc/: intro.md
cpp/interview/bookings/: CMakeLists.txt  Dockerfile
cpp/interview/ws_beast/: CMakeLists.txt  Dockerfile  compile_flags.txt
cpp/interview/ws_beast/src/: Client.cpp  Client.hpp  main.cpp
cpp/interview/ws_beast/tools/: client.py  server.py
cpp/interview/ws_websocketpp/: CMakeLists.txt  Dockerfile  build.sh  ca-chain.cert.pem  client.py  compile_flags.txt  localhost.pem  main.cpp  run.sh  server.py
cpp/misc/cmake/2/: CMakeLists.txt  compile_flags.txt  main.cpp
cpp/misc/cmake/2/include/: foo.hpp
cpp/misc/cmake/3/: CMakeLists.txt  Dockerfile  compile_flags.txt  init.sh
cpp/misc/cmake/5/: CMakeLists.txt  Dockerfile  compile_flags.txt  main.cpp  run.sh
cpp/misc/cmake/5/foo/: CMakeLists.txt
cpp/misc/cmake/5/foo/src/: foo.cpp
cpp/misc/patterns/: abstract_factory.cpp  adapter.cpp  bridge.cpp  builder.cpp  decorator.cpp  factory_method.cpp  prototype.cpp
cpp/misc/templates/: forward.cpp  move.cpp  shared_ptr.cpp  string.cpp  templates0.cpp  templates1.cpp  templates10.cpp  templates2.cpp  templates3.cpp  templates4.cpp  templates5.cpp  templates6.cpp  templates7.cpp  templates8.cpp  templates9.cpp  unique_ptr.cpp  vector.cpp
cpp/misc/threads/threads6/: CMakeLists.txt
cpp/misc/threads/threads6/src/: main.cpp
cpp/projects/lisp/: .gitignore  Makefile  compile_flags.txt  (+46 more)
examples/example1/: main.go
examples/example10-interfaces/: main.go
examples/example12-http/: main.go
examples/example16-goroutines/: main.go
examples/example17-channels/: main.go
examples/example18-select/: main.go
examples/example21-interfaces/: main.go
examples/example24-locks-2/: main.go
examples/example27-hydra-chat-system/: rooms.go
examples/example28/: main.go
examples/example29-slices/: go.mod
examples/example3-console-app/: go.mod
examples/example30-concurrency/: main.go
examples/example6-aggregate-types/: main.go
examples/example8-functions/: main.go
examples/example9-channels/: main.go
misc/enum/: main.go
misc/examples/: interfaces.go
misc/patterns/: 00_open_closed_principle.go  01_builder_callback.go  02_factory_factory_function.go  02_factory_factory_generator.go  04_bridge.go  05_composite.go  06_decorator.go  07_proxy.go  08_visitor.go  main.go
misc/rabbitmq/: Makefile  Readme  go.mod  main.go
projects/binary-search-cli/: main.go
projects/character-set-representation-cli/: main.go
projects/clock-cli/: go.mod  main.go
projects/empty-files-finder-cli/: out.txt
projects/git-sort-commits/: go.mod
projects/gold-watcher-gui/: gold-prices.go
projects/google-translate-cli/: main.go
projects/google-trends-cli/: go.mod  main.go
projects/hangman-cli/: main.go
projects/markdown-editor-gui/: go.mod
projects/nutrition-calculator-cli/: nutrition-calculator  nutritional_score.go
projects/page-downloader-cli/: main.go
projects/quote-of-the-day-cli/: main.go
projects/redmine-cut-tasks/: main.go
projects/rock-paper-scissors-cli/: main.go
projects/rock-paper-scissors-web/: index.html
projects/simple-client-and-server-cli/: client.go  server.go
projects/snake-cli/: go.mod  main.go
projects/static-file-server/: main.go
projects/web-crawler-cli/: go.mod
projects/xo-game-cli/: main.go
(+898 files in other folders)
